# internal/api/server.go
@@ -30,6 +30,7 @@ func SetupRouter(svc *service.Service) *gin.Engine {
 	authorized.POST("/api/user/orders", PostUserOrders(svc))
 	authorized.GET("/api/user/orders", GetUserOrders(svc))
 	authorized.GET("/api/user/balance", GetUserBalance(svc))
+	authorized.POST("/api/user/balance/withdraw", UserBalanceWithdraw(svc))
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	return r
